--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <div class="grid">
 
-      <div>
-        <div>
+      <div class="row">
+        <div class="col">
           <div class="text">
             <p>Cras ac erat tempor, scelerisque eros id, pharetra erat. Morbi eu massa suscipit elit mattis auctor. Nunc
               sit amet massa dictum dolor convallis maximus. Etiam nec aliquam quam. Nulla convallis ornare semper.
@@ -42,7 +42,7 @@
               consequat leo et aliquam iaculis.</p>
           </div>
         </div>
-        <div>
+        <div class="row">
           <img class="image" src="palms1.jpg" alt="Afskaplega lorem-ipsum-leg pálmatré">
         </div>
       </div>
@@ -81,8 +81,8 @@
     </div>
 
     <div class="cards">
-      <div>
-        <div>
+      <div class="row">
+        <div class="col">
           <section class="card">
             <h2 class="card__title">Aliquam erat volutpat in dignissim id sagittis nec leo</h2>
             <div class="card__content">
@@ -97,7 +97,7 @@
           </section>
         </div>
 
-        <div>
+        <div class="col">
           <section class="card">
             <h2 class="card__title">Loremipsumdolorsitametconsecteturadipiscingelit</h2>
             <div class="card__content">
@@ -114,7 +114,7 @@
           </section>
         </div>
 
-        <div>
+        <div class="col">
           <section class="card">
             <h2 class="card__title">Proin dui leo</h2>
             <div class="card__content">
@@ -136,7 +136,7 @@
           </section>
         </div>
 
-        <div>
+        <div class="col">
           <section class="card">
             <h2 class="card__title">Lorem ipsum</h2>
             <div class="card__content">
@@ -153,7 +153,7 @@
           </section>
         </div>
 
-        <div>
+        <div class="col">
           <section class="card">
             <h2 class="card__title">Lorem ipsum</h2>
             <div class="card__content">
@@ -201,8 +201,8 @@
     </div>
 
     <div class="grid">
-      <div>
-        <div>
+      <div class="row">
+        <div class="col">
           <div class="text">
             <p>Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas
               fermentum id nulla in iaculis. Vivamus mollis eros non erat mollis tincidunt. Duis volutpat ultrices
@@ -231,7 +231,7 @@
               augue posuere vel.</p>
           </div>
         </div>
-        <div>
+        <div class="col">
           <img class="image" src="palms3.jpg" alt="lorem-ipsum-legustu pálmatrén">
         </div>
       </div>
