--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
     </div>
 
     <div class="cards">
-      <div class="row">
-        <div class="col">
+      <div class="cards__row">
+        <div class="cards__col">
           <section class="card">
             <h2 class="card__title">Aliquam erat volutpat in dignissim id sagittis nec leo</h2>
             <div class="card__content">
@@ -97,7 +97,7 @@
           </section>
         </div>
 
-        <div class="col">
+        <div class="cards__col">
           <section class="card">
             <h2 class="card__title">Loremipsumdolorsitametconsecteturadipiscingelit</h2>
             <div class="card__content">
@@ -114,7 +114,7 @@
           </section>
         </div>
 
-        <div class="col">
+        <div class="cards__col">
           <section class="card">
             <h2 class="card__title">Proin dui leo</h2>
             <div class="card__content">
@@ -136,7 +136,7 @@
           </section>
         </div>
 
-        <div class="col">
+        <div class="cards__col">
           <section class="card">
             <h2 class="card__title">Lorem ipsum</h2>
             <div class="card__content">
@@ -153,7 +153,7 @@
           </section>
         </div>
 
-        <div class="col">
+        <div class="cards__col">
           <section class="card">
             <h2 class="card__title">Lorem ipsum</h2>
             <div class="card__content">
@@ -185,7 +185,7 @@
           </section>
         </div>
 
-        <div class="cards__col cards--first-flex-item">
+        <div class="cards__col cards__first-flex-item">
           <section class="card">
             <h2 class="card__title">Lorem ipsum</h2>
             <div class="card__content">
