--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
     <div class="grid">
 
-      <div class="row">
-        <div class="col">
-          <div class="text">
+      <div class="grid__row">
+        <div class="grid__col">
+          <div class="grid__text">
             <p>Cras ac erat tempor, scelerisque eros id, pharetra erat. Morbi eu massa suscipit elit mattis auctor. Nunc
               sit amet massa dictum dolor convallis maximus. Etiam nec aliquam quam. Nulla convallis ornare semper.
               Aenean at rhoncus lectus. Vestibulum nisi lorem, eleifend a eros bibendum, tincidunt ultrices velit. Proin
@@ -42,17 +42,17 @@
               consequat leo et aliquam iaculis.</p>
           </div>
         </div>
-        <div class="row">
-          <img class="image" src="palms1.jpg" alt="Afskaplega lorem-ipsum-leg pálmatré">
+        <div class="grid__col">
+          <img class="grid__image" src="palms1.jpg" alt="Afskaplega lorem-ipsum-leg pálmatré">
         </div>
       </div>
 
-      <div>
-        <div>
-          <img class="image" src="palms2.jpg" alt="Jafnvel lorem-ipsum-legri pálmatré">
+      <div class="grid__row">
+        <div class="grid__col grid__last-item">
+          <img class="grid__image" src="palms2.jpg" alt="Jafnvel lorem-ipsum-legri pálmatré">
         </div>
-        <div>
-          <div class="text">
+        <div class="grid__col">
+          <div class="grid__text">
             <p>Nunc ornare libero sit amet felis faucibus tincidunt laoreet sed magna. Etiam volutpat augue quis sapien
               pharetra, efficitur semper ipsum aliquet. Duis commodo elit libero, et vestibulum tellus scelerisque eu.
               Sed non viverra tortor. Nulla lorem magna, pellentesque sit amet leo eu, laoreet imperdiet lorem. Fusce
@@ -201,9 +201,9 @@
     </div>
 
     <div class="grid">
-      <div class="row">
-        <div class="col">
-          <div class="text">
+      <div class="grid__row">
+        <div class="grid__col">
+          <div class="grid__text">
             <p>Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas
               fermentum id nulla in iaculis. Vivamus mollis eros non erat mollis tincidunt. Duis volutpat ultrices
               justo, vel euismod justo elementum nec. Praesent ornare, neque sit amet posuere facilisis, elit erat
@@ -231,8 +231,8 @@
               augue posuere vel.</p>
           </div>
         </div>
-        <div class="col">
-          <img class="image" src="palms3.jpg" alt="lorem-ipsum-legustu pálmatrén">
+        <div class="grid__col">
+          <img class="grid__image" src="palms3.jpg" alt="lorem-ipsum-legustu pálmatrén">
         </div>
       </div>
     </div>
